# bakery

./: .gitignore  Cargo.toml  README.md
src/: latex.rs  main.rs  sass.rs  site.rs  util.rs
testdata/: bakery.toml
testdata/_content/: index.md  one.md  two.md
testdata/_templates/: index.html  page.html
testdata/content/: boop.md  index.md  one.md  three.md  two.md
testdata/sass/: katex.scss  style.scss
testdata/sass/poole/: _code.scss
testdata/templates/: base.html  index.html  page.html
