[package]
name = "bakery"
description = "A simple static site generator."
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
atom_syndication = { version = "0.11", features = ["with-serde"] }
chrono = "0.4"
clap = { version = "3.0.0-rc.4", features = ["derive"] }
fs_extra = "1"
grass = { version = "0.10", default-features = false, features = ["random"] }
gray_matter = "0.2"
katex = "0.4"
lazy_static = "1"
notify = "4"
pulldown-cmark = "0.8"
rayon = "1.5"
serde = "1"
serde_json = "1"
syntect = "4"
tera = "1.15"
thiserror = "1"
toml = "0.5"
url = { version = "2", features = ["serde"] }
walkdir = "2"