[package]
name = "bakery"
description = "A simple static site generator."
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "LICENSE-*", "README.md"]

[dependencies]
aho-corasick = "0.7"
anyhow = "1"
atom_syndication = { version = "0.11", features = ["with-serde"] }
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
globset = "0.4"
globwalk = "0.8"
grass = { version = "0.10", default-features = false, features = ["random"] }
katex = "0.4"
notify = "4"
once_cell = "1"
pulldown-cmark = "0.9"
serde = "1"
serde_json = "1"
syntect = "4"
tera = "1.15"
thiserror = "1"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","tracing-log"] }
url = { version = "2", features = ["serde"] }
walkdir = "2"
